# gandalf-linkedin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
gandalf_linkedin/: __init__.py  config.py  game_manager.py  linkedin_handler.py  llm_handler.py  main.py  prompt.py
tests/: __init__.py  test_linkedin_handler.py  test_llm_handler.py
